--- a/wp-content/themes/style.css
+++ b/wp-content/themes/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: NathalieMota 
+Theme Name: Nathalie Mota 
 Theme URI: http://localhost/
 Author: RACHID ICHOU
 Author URI: hhttp://localhost/
-Description: Thème_Nathalie Mota 
+Description: Thème pour Nathalie Mota 
 Version: 1.0
-Tags: photos
-Text Domain: nathaliemota
+Tags: photography, photos
+Text Domain: nathalie mota
 */
