--- a/wp-content/themes/style.css
+++ b/wp-content/themes/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Nathalie Mota 
+Theme Name: NathalieMota_V2
 Theme URI: http://localhost/
 Author: RACHID ICHOU
 Author URI: hhttp://localhost/
